@@ -338,12 +338,15 @@ include_once('include/page_header.php');
 		unset($_REQUEST['itemid']);
 		$_REQUEST['form'] = 'clone';
 	}
-	else if(isset($_REQUEST['save'])){
+	else if(isset($_REQUEST['save']) && ($_REQUEST['form_hostid'] > 0)){
 		$applications = get_request('applications',array());
 		$delay_flex = get_request('delay_flex',array());
 		$db_delay_flex = '';
-		foreach($delay_flex as $num => $val)
+
+		foreach($delay_flex as $num => $val){
 			$db_delay_flex .= $val['delay'].'/'.$val['period'].';';
+		}
+		
 		$db_delay_flex = trim($db_delay_flex,';');
 
 		$item = array(
