@@ -362,13 +362,15 @@ include_once('include/page_header.php');
 			CProfile::update('web.popup.hostid',$hostid,PROFILE_TYPE_ID);
 		}
 
-		if(str_in_array($srctbl,array('triggers','hosts','host_group'))){
-			$btnEmpty = new CButton('empty',S_EMPTY,
-				get_window_opener($dstfrm, $dstfld1, 0).
-				get_window_opener($dstfrm, $dstfld2, '').
-				" close_window(); return false;");
+		if(str_in_array($srctbl,array('triggers','hosts','host_group','hosts_and_templates'))){
+			$value1 = (isset($_REQUEST['dstfld1']) && (zbx_strpos($_REQUEST['dstfld1'], 'id') !== false))?0:'';
+			$value2 = (isset($_REQUEST['dstfld2']) && (zbx_strpos($_REQUEST['dstfld2'], 'id') !== false))?0:'';
 
-			$frmTitle->addItem(array(SPACE,$btnEmpty));
+			$epmtyScript = get_window_opener($dstfrm, $dstfld1, $value1);
+			$epmtyScript.= get_window_opener($dstfrm, $dstfld2, $value2);
+			$epmtyScript.= ' close_window(); return false;';
+
+			$frmTitle->addItem(array(SPACE,new CButton('empty',S_EMPTY, $epmtyScript)));
 		}
 	}
 
