@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2311] fixed Host group empty value selection for items filtering (Aly)
  - [ZBXNEXT-313] implemented string pool for configuration cache (asaveljevs)
  - [ZBX-2417] fixed timeout handling for passive checks on agent side (Sasha)
  - [ZBX-1873] added slideshow delay multiplayer and fixed slides not showing graphs (Vedmak)
